fix header spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -68,7 +68,7 @@ h1 {
   margin: 0;
 
   @media screen and (min-width: 500px) {
-    margin: 0 0 1.438rem 0;
+    margin: 0 0 1rem 0;
   }
 }
 
